--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.1.2",
+    "@angular/cdk": "^5.0.2",
     "@angular/common": "5.0.1",
     "@angular/compiler": "5.0.1",
     "@angular/core": "5.0.1",
     "@angular/forms": "5.0.1",
     "@angular/http": "5.0.1",
+    "@angular/material": "^5.0.2",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
     "@angular/router": "5.0.1",
@@ -29,6 +32,7 @@
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "moment": "2.19.1",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.9.3",
@@ -41,6 +45,7 @@
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "5.0.1",
     "@types/jasmine": "2.6.3",
+    "@types/lodash": "^4.14.91",
     "@types/node": "8.0.50",
     "codelyzer": "4.0.1",
     "jasmine-core": "2.8.0",
@@ -48,9 +53,9 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-coverage-istanbul-reporter": "1.3.0",
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
